# gamebase

./: .gitignore  README.md  pyproject.toml
gamebase/: __init__.py  analyser.py  cli.py  db.py  models.py  scraper.py  steam.py  tracker.py
tests/: test_analyser.py  test_db.py  test_models.py  test_scraper.py  test_steam.py  test_tracker.py
